# bertrandpovere

./: combo.py  generate_question.py  main.py  ocr.py  ocr_q_gen.py  product.json  pyproject.toml  recomendation.py  requirements.txt  retrive.py
